# PolarCodes

./: .gitmodules  CMakeLists.txt  configure.m  make.m
configs/: test_config.xml
include/: GaussianApproximation.h  ScCreeperDecoder.h  feexcept.h
mat/: decoder.m
src/: BaseDecoder.cpp  CMakeLists.txt  MonteCarloSimulator.cpp  PolarCode.cpp  ScCreeperDecoder.cpp  ScFanoDecoder.cpp  ScFlipDecoder.cpp  ScFlipFanoDecoder.cpp  ScListFanoDecoder.cpp  ScListFlipStatDecoder.cpp  ScStackOperationCounter.cpp  ScStackOptimizedDecoder.cpp  Simulate.cpp  Test_GA.cpp  mex.cpp  test_creeper.cpp
