add_executable(
  main
  BaseChannel.cpp
  BaseDecoder.cpp
  BaseSimulator.cpp
  BpskAwgnChannel.cpp
  BpskBscChannel.cpp
  CommonTransformations.cpp
  ConfigReading.cpp
  CRC.cpp
  DecoderType.cpp
  Encoder.cpp
  GaussianApproximation.cpp
  main.cpp
  MonteCarloSimulator.cpp
  PolarCode.cpp
  ScCrcAidedDecoder.cpp
  ScCreeperDecoder.cpp
  ScDecoder.cpp
  ScDecoderTreeMaker.cpp
  ScFanoDecoder.cpp
  ScFlipDecoder.cpp
  ScFlipFanoDecoder.cpp
  ScFlipProgDecoder.cpp
  ScListDecoder.cpp
  ScListFanoDecoder.cpp
  ScListFlipOracleStatDecoder.cpp
  ScListFlipStatDecoder.cpp
  ScOptimized.cpp
  ScRecursiveDecoder.cpp
  ScStackDecoder.cpp
  ScStackOperationCounter.cpp
  ScStackOptimizedDecoder.cpp
  Simulate.cpp
  SimulationType.cpp
  Test_AwgnBer.cpp
  Test_CRC.cpp
  Test_GA.cpp
  Test_ScTreeMaker.cpp)
target_link_libraries(main PUBLIC default)
